# vtkToolbox

./: .gitignore  CMakeLists.txt  README.md
MATLAB/: readVTK.m  remeshTriangleMesh.m  tetrahedralizeTriangleMesh.m  tetrahedralizeTriangleMesh_tetgen.m  tetrahedralizeTriangleMesh_twoSurfaces.m  triangulationToVtk.m  vtkAlignNodesWithElectrodes.m  vtkAlignNodesWithElectrodes.mexw64  vtkAppendFilter.m  vtkAppendFilter.mexw64  vtkAppendPolyData.m  vtkAppendPolyData.mexw64  vtkArrayMapperNearestNeighbor.m  vtkArrayMapperNearestNeighbor.mexw64  vtkBarycentricCoords.m  vtkBarycentricCoords.mexw64  vtkBarycentricInterpMat.m  vtkBooleanOperationPolyDataFilter.m  vtkBooleanOperationPolyDataFilter.mexw64  vtkCellCentroids.m  vtkCellCentroids.mexw64  vtkCellDataToPointData.m  vtkCellDataToPointData.mexw64  vtkCenterOfArea.m  vtkCenterOfVolume.m  vtkCleanPolyData.m  vtkCleanPolyData.mexw64  vtkCleanUnstructuredGrid.m  vtkCleanUnstructuredGrid.mexw64  vtkConnectivityFilter.m  vtkConnectivityFilter.mexw64  vtkContourFilter.m  vtkContourFilter.mexw64  vtkConvhull.m  vtkCreateIcosphere.m  vtkCreateStruct.m  vtkDataSetSurfaceFilter.m  vtkDataSetSurfaceFilter.mexw64  vtkDeleteDataArrays.m  vtkEdgeLengths.m  (+45 more)
libvtkMatlab/: common.cxx  common.h  structToVtk.cxx  structToVtk.h  vtkToStruct.cxx  vtkToStruct.h
vtkAlignNodesWithElectrodes/: Vector3.h  vtkAlignNodesWithElectrodes.cxx
vtkAppendFilter/: vtkAppendFilter.cxx
vtkAppendPolyData/: vtkAppendPolyData.cxx
vtkArrayMapperNearestNeighbor/: vtkArrayMapperNearestNeighbor.cxx
vtkBarycentricCoords/: Matrix3.h  vtkBarycentricCoords.cxx
vtkBooleanOperationPolyDataFilter/: vtkBooleanOperationPolyDataFilter.cxx
vtkCellCentroids/: vtkCellCentroids.cxx
vtkCellDataToPointData/: vtkCellDataToPointData.cxx
vtkCleanPolyData/: vtkCleanPolyData.cxx
vtkCleanUnstructuredGrid/: vtkCleanUnstructuredGrid.cxx  vtkCleanUnstructuredGridClass.cxx  vtkCleanUnstructuredGridClass.h
vtkConnectivityFilter/: vtkConnectivityFilter.cxx
vtkContourFilter/: vtkContourFilter.cxx
vtkDataSetSurfaceFilter/: vtkDataSetSurfaceFilter.cxx
vtkExtractEdges/: vtkExtractEdges.cxx
vtkFeatureEdges/: vtkFeatureEdges.cxx
vtkFillSurfaceHoles/: vtkFillSurfaceHoles.cxx
vtkFillSurfaceHoles/FillSurfaceHoles/: COPYRIGHT  SurfaceHoleFiller.cpp  SurfaceHoleFiller.h  UmbrellaWeightedOrder2Smoother.cpp  UmbrellaWeightedOrder2Smoother.h
vtkIntegrateAttributes/: vtkIntegrateAttributes.cxx
vtkLineOfBlock/: vtkLineOfBlock.cxx
vtkLinearExtrusionFilter/: vtkLinearExtrusionFilter.cxx
vtkLinearSubdivisionFilter/: vtkLinearSubdivisionFilter.cxx
vtkLoopSubdivisionFilter/: vtkLoopSubdivisionFilter.cxx
vtkMeshQuality/: vtkMeshQuality.cxx
vtkMmg3d/: vtkMmg3d.cxx
vtkPlaneCutter/: vtkPlaneCutter.cxx
vtkPointDataToCellData/: vtkPointDataToCellData.cxx
vtkRead/: vtkRead.cxx
vtkSmoothPolyDataFilter/: vtkSmoothPolyDataFilter.cxx
vtkStreamTracer/: vtkStreamTracer.cxx
vtkTEMPLATE/: vtkTEMPLATE.cxx
vtkThreshold/: vtkThreshold.cxx
vtkToolbox.xcodeproj/: project.pbxproj
vtkToolbox.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
vtkTriangleFilter/: vtkTriangleFilter.cxx
vtkWindowedSincPolyDataFilter/: vtkWindowedSincPolyDataFilter.cxx
vtkWrite/: vtkWrite.cxx
vtkWrite/additionalWriters/: vtkOBJWriter.cxx  vtkOBJWriter.h  vtkOFFWriter.cxx  vtkOFFWriter.h
